--- a/system-senai-api/src/main/resources/application.properties
+++ b/system-senai-api/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9091
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/senai-sa
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
