--- a/system-senai-frontend/bin/src/main/resources/application.properties
+++ b/system-senai-frontend/bin/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8082
 spring.devtools.restart.enabled=false
 endpoint=http://localhost:9091
+
+#Oracle Cloud
+#endpoint=http://150.136.168.47:8080
